# EVA

./: .env.example  .gitignore  README.md  design.md  styling  todo.md
EVA-App/: .env.example  .eslintrc.json  .prettierrc.json  cache-analysis.js  create-tray-icon.js  database-analysis.js  debug-attributes.js  esi-swagger.json  fix-database-attributes.js  openapi-generator-config.yaml  package-lock.json  package.json  schema-validation.js  simple-sde-fix.js  test-etag.js  test-sde-manual.js  test-sde.js  trigger-sde-reimport.js  tsconfig.json  webpack.plugins.ts  webpack.renderer.config.ts
EVA-App/scripts/: test-sde-data.js  trigger-sde-import.ts
EVA-App/src/: index.css  index.ts  preload.ts  renderer.ts
EVA-App/src/main/: index.ts
EVA-App/src/main/services/: AuthService.ts  CacheService.ts  EsiService.ts  SecureTokenStorage.ts  SystemTrayService.ts
EVA-App/src/renderer/: App.old.css  App.old.tsx  App.tsx  holographic-ui.css  routes.tsx
EVA-App/src/renderer/components/: Character3DPortrait.tsx  CharacterTabs.tsx  ContextPanel.tsx  ShipFitting.tsx  ShipFittingPanel.css  ShipFittingPanel.tsx  SkillAnalysisPanel.css  SkillAnalysisPanel.tsx  (+3 more)
EVA-App/src/services/: activityBasedRecommendations.ts  activitySelectionService.ts  cacheService.ts  dogmaAttributeFixer.ts  dogmaEngine.ts  dpsCalculator.ts  fittingCalculator.ts  fittingEffectivenessCalculator.ts  recommendationCache.ts  recommendationOrchestrator.ts  sdeService.ts  shipAnalysisService.ts  shipRecommendationEngine.ts  skillPlanOptimizer.ts  stackingPenaltyEngine.ts  startupSDEManager.ts
EVA-App/src/shared/: config.ts  constants.ts
EVA-App/src/types/: global.d.ts
EVA-App/src/utils/: errorHandler.ts  logger.ts
eva-desktop-forge/eva-desktop-forge/: CLAUDE.md  ChatGPT-Image-Prompt.md  DPS_CALCULATIONS.md  EVA-UI-MOCKUPS.md  FITTING_ENHANCEMENTS.md  README.md  STYLE.md  TODO.md  create-icons.js  forge.config.ts  package-lock.json  package.json  recommendations.md  summary.md  tasks.md  test-ship-loading.js  test-vexor.js  tsconfig.json  webpack.plugins.ts
eva-desktop-forge/eva-desktop-forge/scripts/: generate-icons.js  screenshot-automation.js  trigger-sde-import.js
eva-desktop-forge/eva-desktop-forge/src/: index-complex.ts  index.html  index.ts  preload.ts  renderer.ts
eva-holographic/: URL_HANDLER_README.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  setup_protocol.py  test_3d_rendering.py  test_url_handler.py
eva-holographic/src/eva/: __init__.py  __main__.py  main.py
eva-holographic/src/eva/api/: __init__.py  auth_manager.py  esi_client.py  sde_loader.py  sso_auth.py  url_handler.py
eva-holographic/src/eva/audio/: __init__.py  sound_effects.py  sound_manager.py
eva-holographic/src/eva/core/: __init__.py  config.py  models.py
eva-holographic/src/eva/graphics/: __init__.py  camera.py  renderer.py  scene.py  shaders.py
eva-holographic/src/eva/ui/: __init__.py  main_window.py
eva-holographic/src/eva/ui/widgets/: __init__.py  holographic_viewport.py  navigation_panel.py  status_display.py  welcome_screen.py
(+82 files in other folders)
