[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eva-holographic"
version = "2.0.0"
description = "Revolutionary 3D Holographic Desktop Application for EVE Online"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EVA Development Team", email = "eva-dev@example.com"}
]
keywords = ["eve-online", "3d", "holographic", "desktop", "opengl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.11"
dependencies = [
    # Core GUI and 3D Graphics
    "PyQt6>=6.7.0",
    "PyOpenGL>=3.1.7",
    "PyOpenGL-accelerate>=3.1.7",
    "moderngl>=5.11.1",
    "numpy>=1.26.0",
    
    # Database and ORM
    "SQLAlchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    
    # HTTP and API
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "pydantic>=2.7.0",
    
    # Utilities
    "pydantic-settings>=2.3.0",
    "cryptography>=42.0.0",
    "typing-extensions>=4.12.0",
    
    # Audio
    "PyQt6-Audio>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-qt>=4.4.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
build = [
    "pyinstaller>=6.8.0",
    "auto-py-to-exe>=2.44.0",
]

[project.scripts]
eva = "eva.main:main"

[project.urls]
Homepage = "https://github.com/your-username/eva-holographic"
Repository = "https://github.com/your-username/eva-holographic"
Issues = "https://github.com/your-username/eva-holographic/issues"
Documentation = "https://github.com/your-username/eva-holographic/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eva = ["assets/**/*", "data/**/*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
qt_api = "pyqt6"